--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-  body {
-    padding: 0;
-    margin: 0;
-  }
+body {
+  padding: 0;
+  margin: 0;
+}
 
 h1 {
   text-align: center;
@@ -30,11 +30,20 @@ h1 {
   margin-right: 1px;
 }
 
-#piece {
+.black-piece {
   width: 60%;
   height: 60%;
   margin: 20% auto;
+  border: 1px solid #eee;
   border-radius: 50%;
   background-color: #555;
 }
 
+.white-piece {
+  width: 60%;
+  height: 60%;
+  margin: 20% auto;
+  border: 1px solid #555;
+  border-radius: 50%;
+  background-color: #eee;
+}
