--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: Helvetica, sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -8,7 +9,7 @@ h1 {
 }
 
 .board {
-  margin: 50px auto;
+  margin: 0 auto;
   width: 488px;
   height: 488px;
 }
@@ -47,3 +48,20 @@ h1 {
   border-radius: 50%;
   background-color: #eee;
 }
+
+#set-board {
+  text-align: center;
+  width: 488px;
+  height: 50px;
+  margin: 60px auto;
+  border-radius: 5px;
+  background-color: #aaa;
+  border: 1px solid #eee;
+}
+
+#set-board h2 {
+  font-weight: 300;
+  color: white;
+  vertical-align: middle;
+}
+
