fairly large revamp, new approach, refined methods and need to work on opponent attack method. large list of things to do tomorrow.

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ h1 {
 }
 
 .black-piece {
+  cursor: pointer;
   width: 60%;
   height: 60%;
   margin: 20% auto;
@@ -41,6 +42,7 @@ h1 {
 }
 
 .white-piece {
+  cursor: pointer;
   width: 60%;
   height: 60%;
   margin: 20% auto;
